--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
+        "Automatisches",
+        "Binärdatei",
         "debuginfo",
+        "Entfernen",
         "rustc",
         "rustup",
+        "Symbolen",
         "trapapa"
     ]
 }
