--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ rustfmt = "0.10.0"
 [profile.release]
 strip = true # Automatically strip symbols from the binary
 opt-level = "s" # Optimize for size
+lto = true # Enable link time optimization
+codegen-units = 1 # Maximize size reduction optimizations
